--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: "Release Creator and Changelog Updater"
 description: >
   Extracts the latest version from package.json and updates changelog.md.
-  Creates a release using ncipollo/release-action with information from the changelog.
+  Creates a release with information from the changelog.
   Prepares changelog.md for the next run by adding a new 'unreleased' section.
   Dynamically lists Git commits since the last release and adds contributors.
 
