Workflow - github-action-test job expanded with action/checkout

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
     name: Github Action Test
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Run Github Action in dry-run mode
         uses: ./
         with:
