--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,9 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "daily"
-      time: "03:00"
+      interval: "weekly"
+      day: "saturday"
+      time: "06:00"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 20
     labels:
