--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,7 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "saturday"
+      interval: "daily"
       time: "06:00"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 20
@@ -38,8 +37,7 @@ updates:
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "saturday"
+      interval: "daily"
       time: "06:00"
       timezone: "Europe/Berlin"
     labels:
@@ -47,6 +45,5 @@ updates:
       - "dependabot"
     ignore:
       - dependency-name: "node"
-        update-types: ["version-update:semver-major"]
     reviewers:
       - "dependabot[bot]"
