--- a/action.yml
+++ b/action.yml
@@ -27,7 +27,7 @@ inputs:
     required: false
     default: ""
   tag-template:
-    description: "Custom template for tag naming (e.g., 'ms/<version>'). If empty, auto-detection is used."
+    description: "Custom template for tag naming (e.g., 'ms/<version>'). If empty, fallback (v<version>) is used."
     required: false
     default: "v<version>"
   fallback-version:
