--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   },
   "devDependencies": {
     "@jest/globals": "29.7.0",
-    "@sap/eslint-config": "^0.4.0",
-    "@tsconfig/node22": "^22.0.0",
+    "@sap/eslint-config": "0.4.0",
+    "@tsconfig/node22": "22.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.13.4",
-    "eslint": "^9.20.1",
+    "eslint": "9.20.1",
     "jest": "29.7.0",
     "jest-environment-node": "29.7.0",
-    "prettier": "^3.5.1",
+    "prettier": "3.5.1",
     "ts-jest": "29.2.5",
     "typescript": "5.7.3"
   }
