--- a/action.yml
+++ b/action.yml
@@ -26,10 +26,10 @@ inputs:
     description: "Prefix for release title."
     required: false
     default: ""
-  custom-tag:
-    description: "Custom tag for the release. If empty, 'v{version}' is used."
+  tag-template:
+    description: "Custom template for tag naming (e.g., 'ms/<version>'). If empty, fallback (v<version>) is used."
     required: false
-    default: ""
+    default: "v<version>"
   fallback-version:
     description: "Fallback version if package.json has no version."
     required: false
