--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [":pinAllExceptPeerDependencies"],
   "semanticCommits": "enabled",
-  "enabledManagers": ["npm", "docker"],
+  "enabledManagers": ["npm", "dockerfile"],
   "branchPrefix": "deps/",
   "timezone": "Europe/Berlin",
   "prConcurrentLimit": 20,
@@ -10,7 +10,7 @@
 
   "packageRules": [
     {
-      "matchCategories": ["docker"],
+      "matchCategories": ["dockerfile"],
       "enabled": true,
       "groupName": "Docker Dependencies"
     },
