--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
   "branchPrefix": "deps/",
   "timezone": "Europe/Berlin",
   "prConcurrentLimit": 20,
-  "schedule": ["0 6 * * *"],
+  "schedule": ["* 6 * * *"],
 
   "packageRules": [
     {
